fixed css bug on small screen

--- a/src/sass/App.scss
+++ b/src/sass/App.scss
@@ -30,7 +30,6 @@ html {
   @include small-screen {
     width: 100%;
     max-height: 600px;
-    height: 90vh;
   }
 
   .drum-pads {
